[package]
name = "noisy_float"
version = "0.1.9"
edition = "2018"
authors = ["Matthew Michelotti <matthew@matthewmichelotti.com>"]
description = "Contains floating point types that panic if they are set to an illegal value, such as NaN"
documentation = "https://docs.rs/noisy_float"
repository = "https://github.com/SergiusIW/noisy_float-rs"
readme = "README.md"
keywords = ["float", "signaling", "NaN", "finite", "panic"]
license = "Apache-2.0"

[dependencies]
num-traits = "0.2"
serde = { version = "1.0", optional = true }
alga = { version = "0.8.2", optional = true }
approx = { version = "0.3.1", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"

[features]
serde-1 = ["serde"]
alga-real = ["alga", "approx"]
